Cleanup - mostly eliminated unnecessary casts